MID-8215 fixed post init handling